--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- MESSAGES -->
     <string name="success">Process Success</string>
     <string name="fail">Process Failed</string>
+    <string name="general_fail">An unknown error occurred. Please try again later.</string>
     <string name="register_success">Registration done successfully. You can login with your information.</string>
     <string name="register_fail">Registration failed. Please try again later.</string>
     <string name="login_fail">Login failed. Please try again later.</string>
@@ -41,4 +42,6 @@
     <string name="price">Price per unit</string>
     <string name="purchase_date">Purchase date</string>
     <string name="product_link">Product link</string>
+    <string name="is_bought">Is it bought?</string>
+    <string name="is_wanted">Is it wanted?</string>
 </resources>
